WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69880
[Mac] Crash when opening an embedded PDF in a background tab
https://bugs.webkit.org/show_bug.cgi?id=69880
Summary
[Mac] Crash when opening an embedded PDF in a background tab
Alexey Proskuryakov
Reported
2011-10-11 16:25:05 PDT
Steps to reproduce: 1. Open
http://en.wikipedia.org/wiki/Swing-piston_engine
2. Cmd-click on
http://www.freepatentsonline.com/2301667.pdf
link at the bottom. 3. Click on the new tab to show it.
Attachments
proposed fix
(3.69 KB, patch)
2011-10-11 16:34 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-10-11 16:34:20 PDT
Created
attachment 110602
[details]
proposed fix
Darin Adler
Comment 2
2011-10-11 17:06:00 PDT
Comment on
attachment 110602
[details]
proposed fix Both good changes. I think you should land them separately.
Alexey Proskuryakov
Comment 3
2011-10-11 17:16:44 PDT
Committed <
http://trac.webkit.org/changeset/97200
>, <
http://trac.webkit.org/changeset/97201
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug