        [Mac] Crash when opening an embedded PDF in a background tab         https://bugs.webkit.org/show_bug.cgi?id=69880

Reviewed by Darin Adler.

        * WebProcess/Plugins/PluginView.cpp: (WebKit::PluginView::paint): Don't call plug-in that
        doesn't even have a controller yet.



Canonical link: https://commits.webkit.org/85933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97200 268f45cc-cd09-0410-ab3c-d52691b4dbfc